--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 loom.platform=forge
 org.gradle.jvmargs=-Xmx2g
-baseGroup = com.github.nobaboy.autobonk
+baseGroup = me.nobaboy.autobonk
 mcVersion = 1.8.9
 modid = autobonk
-version = 1.0.0
+version = 1.3.6
